Criados os gráficos de medidas da cintura, abdomen e quadril.

--- a/index.html
+++ b/index.html
@@ -179,6 +179,31 @@
             </div>
         </div>
 
+        <br/>
+        <hr class="dash">
+        <br/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <highchart id="chart6" config="graficoCintura"></highchart>
+            </div>
+
+            <div class="col-md-6">
+                <highchart id="chart7" config="graficoAbdomen"></highchart>
+            </div>
+        </div>
+
+        <br/>
+        <hr class="dash">
+        <br/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <highchart id="chart8" config="graficoQuadril"></highchart>
+            </div>
+        </div>
+
+
     </div>
 
 </div>
